rent and retrun api added few issue with payable
